--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- main -->
         <main class="main">
             <p class="main-subtitle">Привет! Меня зовут Таня и я</p>
-            <h1 class="main-title">frontend разработчик<br>и ui<span></span> ux дизайнер</h1>
+            <h1 class="main-title">frontend разработчик<br>и ui&nbsp;<span></span> ux дизайнер</h1>
 
             <div class="main-pictures">
                 <img class="vinyl-img" src="img/vinyl.svg" alt="">
