--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <li class="project project-landing">
                     <a href="https://naumov4t.github.io/Webstudio-page/">
                         <img src="img/projects/project7.svg" alt="webstudio landing">
-                        <p>html<br>css<br>js</p>
+                        <p>html<br>sass<br>js</p>
                         <span>webstudio landing</span>
                     </a>
                 </li>
@@ -116,7 +116,7 @@
                 <li class="project project-landing">
                     <a href="https://naumov4t.github.io/Aquashop/">
                         <img src="img/projects/project8.svg" alt="aquashop landing">
-                        <p>html<br>css<br>js</p>
+                        <p>html<br>sass<br>js</p>
                         <span>aquashop landing</span>
                     </a>
                 </li>
