--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>This is portfolio baby</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6CNPKCH2PH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6CNPKCH2PH');
+</script>
 <body>
 
     <div class="content">
