--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CNPKCH2PH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -62,7 +61,7 @@
             <ul class="projects-container">
 
                 <li class="project project-game">
-                    <a href="https://naumov4t.github.io/Guess-my-number/">
+                    <a href="https://naumov4t.github.io/Guess-my-number/" target="_blank">
                         <img src="img/projects/project1.svg" alt="guess my number">
                         <p>js</p>
                         <span>guess my number</span>
@@ -70,7 +69,7 @@
                 </li>
 
                 <li class="project project-game">
-                    <a href="https://naumov4t.github.io/Pig-game/">
+                    <a href="https://naumov4t.github.io/Pig-game/" target="_blank">
                         <img src="img/projects/project2.svg" alt="pig game">
                         <p>js</p>
                         <span>pig game</span>
@@ -78,7 +77,7 @@
                 </li>
 
                 <li class="project project-game">
-                    <a href="https://naumov4t.github.io/Smile-Mousemove/">
+                    <a href="https://naumov4t.github.io/Smile-Mousemove/" target="_blank">
                         <img src="img/projects/project3.svg" alt="smile mousemove">
                         <p>js</p>
                         <span>smile mousemove</span>
@@ -86,7 +85,7 @@
                 </li>
 
                 <li class="project project-game">
-                    <a href="https://naumov4t.github.io/justRelax/">
+                    <a href="https://naumov4t.github.io/justRelax/" target="_blank">
                         <img src="img/projects/project4.svg" alt="relax">
                         <p>js</p>
                         <span>relax</span>
@@ -100,7 +99,7 @@
             <ul class="projects-container">
 
                 <li class="project project-landing">
-                    <a href="https://naumov4t.github.io/BankistApp/">
+                    <a href="https://naumov4t.github.io/BankistApp/" target="_blank">
                         <img src="img/projects/project5.svg" alt="bankist app">
                         <p>html<br>css<br>js</p>
                         <span>bankist app</span>
@@ -108,7 +107,7 @@
                 </li>
 
                 <li class="project project-landing">
-                    <a href="https://naumov4t.github.io/Advanced-Bankist/">
+                    <a href="https://naumov4t.github.io/Advanced-Bankist/" target="_blank">
                         <img src="img/projects/project6.svg" alt="bankist landing">
                         <p>html<br>css<br>js</p>
                         <span>bankist landing</span>
@@ -116,7 +115,7 @@
                 </li>
 
                 <li class="project project-landing">
-                    <a href="https://naumov4t.github.io/Webstudio-page/">
+                    <a href="https://naumov4t.github.io/Webstudio-page/" target="_blank">
                         <img src="img/projects/project7.svg" alt="webstudio landing">
                         <p>html<br>sass<br>js</p>
                         <span>webstudio landing</span>
@@ -124,7 +123,7 @@
                 </li>
 
                 <li class="project project-landing">
-                    <a href="https://naumov4t.github.io/Aquashop/">
+                    <a href="https://naumov4t.github.io/Aquashop/" target="_blank">
                         <img src="img/projects/project8.svg" alt="aquashop landing">
                         <p>html<br>sass<br>js</p>
                         <span>aquashop landing</span>
@@ -137,7 +136,7 @@
             <ul class="projects-container">
 
                 <li class="project project-design">
-                    <a href="https://www.figma.com/file/Ac1MrgBtg1ja4ZY2kPA6ib/UI-kit-(Copy)">
+                    <a href="https://www.figma.com/file/Ac1MrgBtg1ja4ZY2kPA6ib/UI-kit-(Copy)" target="_blank">
                         <img src="img/projects/project9.svg" alt="lr.ru">
                         <p>ui-kit</p>
                         <span>lr.ru ui-kit</span>
@@ -145,7 +144,7 @@
                 </li>
 
                 <li class="project project-design">
-                    <a href="https://www.figma.com/file/9rh6hLQ2krcwS8j7MYNtX7/Winemafia">
+                    <a href="https://www.figma.com/file/9rh6hLQ2krcwS8j7MYNtX7/Winemafia" target="_blank">
                         <img src="img/projects/project10.svg" alt="winemafia">
                         <p>design</p>
                         <span>winemafia</span>
@@ -153,7 +152,7 @@
                 </li>
 
                 <li class="project project-design">
-                    <a href="https://www.figma.com/file/HSx8eUagxPZjXK8b0F59Q7/Aquashop">
+                    <a href="https://www.figma.com/file/HSx8eUagxPZjXK8b0F59Q7/Aquashop" target="_blank">
                         <img src="img/projects/project11.svg" alt="aquashop landing">
                         <p>design</p>
                         <span>aquashop landing</span>
@@ -161,7 +160,7 @@
                 </li>
 
                 <li class="project project-design">
-                    <a href="https://www.figma.com/file/snp1JjEQH9JEYwtugYqu4d/Webstudio">
+                    <a href="https://www.figma.com/file/snp1JjEQH9JEYwtugYqu4d/Webstudio" target="_blank">
                         <img src="img/projects/project12.svg" alt="webstudio landing">
                         <p>design</p>
                         <span>webstudio landing</span>
@@ -188,13 +187,13 @@
                 <div class="footer-call">
                     <h4 class="call-title">Связаться со мной</h4>
 
-                    <a href="mailto:tanya.ultrazord@gmail.com?subject=Приглашение на собеседование">tanya.ultrazord@gmail.com</a>
-                    <a href="https://t.me/Gotterrdd">tg: @Gotterrdd</a>
+                    <a href="mailto:tanya.ultrazord@gmail.com?subject=Приглашение на собеседование" target="_blank">tanya.ultrazord@gmail.com</a>
+                    <a href="https://t.me/Gotterrdd" target="_blank">tg: @Gotterrdd</a>
                 </div>
 
                 <div class="footer-git">
                     <h4 class="git-title">Посмотреть мой код</h4>
-                    <a href="https://github.com/Naumov4t">Naumov4t</a>
+                    <a href="https://github.com/Naumov4t" target="_blank">Naumov4t</a>
                 </div>
 
                 <div class="footer-stack">
